--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "http-proxy-middleware": "^2.0.6",
