--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
+    "gh-pages": "^6.1.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
